[gd_scene load_steps=2 format=3 uid="uid://heq7guid53el"]

[ext_resource type="Script" uid="uid://ki54g7tl5ikj" path="res://scripts/ui/quest_item.gd" id="1_nvc8c"]

[node name="QuestItem" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nvc8c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="QuestIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="QuestNameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Name"

[node name="TimeLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Expires in 3 days"

[node name="DetailButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = ">"
